<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Glass Life</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="gesture">Gesture Test</string>
    <string name="title_activity_camera">Take Picture</string>
    <string name="title_activity_wifi">WifiModule</string>
    <string name="message">Click the button below and start speaking</string>
    <string name="album_name">CameraSample</string>
    <string name="wifi_connections">Wifi Connections</string>
    <string name="title_activity_result">Waiting For Result</string>
    <string name="title_activity_audio_record">Record Audio</string>
    <string name="title_activity_record_video">Record Video</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_gesture">Gesture</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_winky">Winky</string>
    <string name="button_calibration">Calibration</string>
    <string name="button_clear_calibration">Clear Calibration</string>
    <string name="hello">Hello World, AudioRecordingActivity!</string>
    <string name="app_info">This is a sample application to record audio.\n\nTo start recording press \"Record\" button, to stop recording press \"Stop\" button.</string>
    <string name="app_name1">Audio Recorder</string>
    <string name="choose_format_title">Choose Audio Format</string>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="audio_format">Format</string>
    <string name="glass_voice_trigger">go cloud</string>
    <string name="everything">Everything</string>
    <string name="sombrero">Sombrero</string>
    <string name="mustache">Mustache</string>
    <string name="clown_face">Clown Face</string>
    <string name="monacle">Monocle</string>
    <string name="voice_cammands">Voice Cammands</string>
    <string name="tap_ready">Two finger tap when ready</string>
    <string name="two_tap_ready">Two finger tap to post on Facebook</string>
    <string name="voice_response">Photo response</string>
    <string name="photo_desec">Glass life photo description</string>
    <string name="text_speak">Speak Cammand Please</string>
    <string name="hello_i_am">Hello I am</string>
    <string name="cloud_picture">Cloud Picture</string>
    <string name="show_me_network">Show me Network</string>
    <string name="send_log">Send Log</string>
    <string name="tap_cammand">Tap to speak cammand</string>
    <string name="progress_message">Please wait! face is detecting </string>
    <string name="facebook_post">Please wait! Posting on facebook </string>

    <string-array name="events_array">
        <item>Hello I am</item>
        <item>Cloud Picture</item>
        <item>Show me Network</item>
        <item>Send Log</item>
    </string-array>

</resources>