<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="26.67dp" >

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="3"
        android:scrollHorizontally="true"
        android:text="@string/voice_response"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="6.67dp" >

        <LinearLayout
            android:id="@+id/progress_container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone" >

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp" >
            </ProgressBar>

            <TextView
                android:id="@+id/progress_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_message" />
        </LinearLayout>

        <ImageView
            android:id="@+id/camera_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/photo_desec" />

        <LinearLayout
            android:id="@+id/viewer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="20dp" >

            <TextView
                android:id="@+id/sombrero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sombrero"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/mustache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mustache"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/monacle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monacle"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/clown_face"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clown_face"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/everything"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/everything"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/footer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:text="@string/tap_ready"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>